last alignment fixes

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -17,6 +17,7 @@
 
   &__section-value {
     font-size: $font-size-small;
+    word-break: break-all;
   }
 
   &__section-social-media-link {
