--- a/src/pages/faq/index.scss
+++ b/src/pages/faq/index.scss
@@ -1,9 +1,18 @@
 @import '../../styles/variables.scss';
 
 .aci-Faq {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
   text-align: center;
   word-wrap: break-word;
+
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box; /* Opera/IE 8+ */
   padding: 150px 10%;
+
   background-color: $cl-black;
 
   &__content {
