--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -55,7 +55,6 @@
 
     &-title {
       font-size: $font-size-title-2;
-      letter-spacing: 0.1em;
     }
 
     &-image {
@@ -76,11 +75,11 @@
 
     &-name {
       font-size: $font-size-title-3;
-      letter-spacing: 0.1em;
     }
 
     &-bio {
       font-size: $font-size-medium;
+      text-align: justify;
     }
   }
 
@@ -90,7 +89,6 @@
 
     &-title {
       font-size: $font-size-title-2;
-      letter-spacing: 0.1em;
       padding-bottom: 65px;
     }
 
@@ -107,6 +105,7 @@
       &-value {
         font-size: $font-size-medium;
         padding-bottom: 10px;
+        word-break: break-all;
       }
     }
 
@@ -133,7 +132,6 @@
 
     &-title {
       font-size: $font-size-title-2;
-      letter-spacing: 0.1em;
       padding-bottom: 65px;
     }
 
